# lfortran

./: .gitignore  CMakeLists.txt  run_tests.py
.scratch/: symbols.asr.txt  type.asr.txt  type_show.c  type_show_after.c
.scratch/mangle_cmake/: CMakeLists.txt  main.f90  mod_a.f90
.scratch/mangle_repro/splitout/: CMakeLists.txt  mod_a_generated.h  module_mod_a__foo_real____0__26516395776.c
.scratch/type_split/: CMakeLists.txt  global_procedures.c  module_tblite_wavefunction_type__get_alpha_beta_occupation__52098003192.c  module_tblite_wavefunction_type__get_density_matrix_real____0_real_______1_real_______2__26416376440.c  module_tblite_wavefunction_type__new_wavefunction__52097998608.c  type_generated.h
ci/: report_c_emit_budget.py  version.sh
docs/: c_backend_optimization_roadmap.md
integration_tests/: CMakeLists.txt  allocatable_character_dummy_01.f90  allocatable_scalar_intent_out_01.f90  allocatable_struct_array_cleanup_01.f90  array_arg_forward_01.f90  array_assumed_size_item_arg_01.f90  array_constructor_07.f90  array_expr_scalarize_01.f90  array_member_minval_01.f90  array_rank3_section_density_01.f90  array_reshape_section_01.f90  array_section_25.f90  array_section_26.f90  array_section_28.f90  array_section_29.f90  array_section_30.f90  array_section_31.f90  array_section_32.f90  array_section_33.f90  array_section_34.f90  array_section_35.f90  array_section_36.f90  arrays_124.f90  arrays_125.f90  arrays_126.f90  arrays_127.f90  arrays_128.f90  arrays_129.f90  arrays_130.f90  arrays_131.f90  arrays_132.f90  arrays_133.f90  arrays_reshape_43.f90  bindc_46.f90  bindc_51.f90  c_aggregate_out_01.f90  c_backend_alloc_char_array_init_01.f90  c_backend_alloc_char_cleanup_01.f90  c_backend_alloc_char_deepcopy_01.f90  c_backend_alloc_class_constructor_result_01.f90  (+173 more)
src/: CMakeLists.txt
tests/: allocatable_aggregate_dummy_slot_01.f90  c_backend_alloc_section_self_assign_01.f90  c_backend_allocatable_char_array_cleanup_01.f90  c_backend_allocatable_char_array_cleanup_ref_01.f90  c_backend_allocatable_char_component_deallocate_cleanup_ref_01.f90  c_backend_allocatable_class_deallocate_01.f90  c_backend_allocatable_string_cleanup_01.f90  c_backend_allocatable_string_intent_out_cleanup_ref_01.f90  c_backend_allocate_source_no_duplicate_01.f90  (+154 more)
(+394 files in other folders)
